cmake_minimum_required(VERSION 3.23)
project(lap_trinh_mang C)

set(CMAKE_C_STANDARD 11)

add_executable(run
#        "tuần 2/ifconfig.c"
#        "tuần 2/ls-al.c"
#        "tuần 2/scandir.c"
#        "tuan 3/gethostbyname.c"
#        "tuan 4/SimpleTCPServer.c"
#        "tuan 4/SimpleTelnetServer.c"
#        "tuan 4/TestTelnet.c"
        "tuan 5/UDPsample.c" "tuan 5/udpclient.c" "tuan 5/udpserver.c" "tuan 5/udpChatServer.c" "tuan 5/udp_broadcast.c")
